--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 
 .logo {
     display: flex;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin-left: 100px;
     
 }
@@ -30,9 +30,48 @@ body {
 .top {
     background-color: #1F2937;
     color: white;
+    display: flex;
+    height: 400px;
+    justify-content: space-evenly;
+    align-content: space-around;
+}
+
+.leftcolumn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+button {
+    background-color: #3882f6;
+    color: white;
+    max-width: 75px;
+    max-height: 35px;
+    border-radius: 7px;
+    border: #3882f6;
+    margin-top: 10px;
+}
+
+.textbox {
+    width: 400px;
 }
 
 .maintext {
     font-size: 48px;
     font-weight: bolder;
+    display: flex;
+    justify-content: left;
+}
+
+img {
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.placeholder {
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
