--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 .logo {
@@ -31,16 +32,14 @@ body {
     background-color: #1F2937;
     color: white;
     display: flex;
+    flex-direction: row;
     height: 400px;
-    justify-content: space-evenly;
-    align-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
 
-.leftcolumn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+
+
 
 button {
     background-color: #3882f6;
@@ -49,7 +48,7 @@ button {
     max-height: 35px;
     border-radius: 7px;
     border: #3882f6;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .textbox {
@@ -63,15 +62,50 @@ button {
     justify-content: left;
 }
 
-img {
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
+#placeholder {
+    max-width: 100%
+    max-height: 100%;
+    height: 200px;
+    border-radius: 10px
 }
 
-.placeholder {
-    width: 500px;
+.mid1 {
+    display: flex;
+    height: 400px;
+    flex-direction: column;
+}
+
+.header2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    display: flex;
+    justify-content: center;
+}
+
+.memes {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.photoset {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+}
+
+#photo1, #photo2, #photo3, #photo4 {
+    max-width: 100%
+    max-height: 100%;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px
+}
+
+.caption {
+    width: 150px;
+}
+
