--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     width: 40px;
     height: 40px;
-    margin-left: 100px;
+    margin-left: 400px;
     
 }
 
@@ -41,11 +41,11 @@ body {
 
 
 
-button {
+.sign-up1 {
     background-color: #3882f6;
     color: white;
-    max-width: 75px;
-    max-height: 35px;
+    width: 100px;
+    height: 30px;
     border-radius: 7px;
     border: #3882f6;
     margin-top: 15px;
@@ -63,7 +63,7 @@ button {
 }
 
 #placeholder {
-    max-width: 100%
+    max-width: 100%;
     max-height: 100%;
     height: 200px;
     border-radius: 10px
@@ -71,7 +71,7 @@ button {
 
 .mid1 {
     display: flex;
-    height: 400px;
+    height: 500px;
     flex-direction: column;
 }
 
@@ -81,6 +81,8 @@ button {
     color: #1f2937;
     display: flex;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .memes {
@@ -98,7 +100,7 @@ button {
 }
 
 #photo1, #photo2, #photo3, #photo4 {
-    max-width: 100%
+    max-width: 100%;
     max-height: 100%;
     height: 150px;
     width: 150px;
@@ -109,3 +111,74 @@ button {
     width: 150px;
 }
 
+.quote-section {
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 400px;
+}
+
+.quote {
+   width: 900px;
+   font-size: 36px;
+   font-style: italic;
+   color: #1f2937;
+}
+
+.author {
+    flex: display;
+    justify-content: right;
+    font-weight: bold;
+    margin-left: 500px;
+}
+
+.bottom-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+}
+
+.sign-up {
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 7px;
+    border-color: #e5e7eb;
+}
+
+.persuade {
+    font-weight: bold;
+}
+
+.container {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 150px;
+    width: 1000px;
+}
+
+.words {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.footer {
+    height: 90px;
+    background-color: #1F2937;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
